--- a/Day2/01品牌列表案例.html
+++ b/Day2/01品牌列表案例.html
@@ -1,12 +1,173 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <script src="./lib/vue.js"></script>
+    <link href="./lib/bootstrap-3.3.7/css/bootstrap.min.css" rel="stylesheet">
+
 </head>
+
 <body>
-    
+    <!-- 
+        JS常用方法 this.list.some()//括号中自定义回调方法
+        this.list.findIndex()//查找集合中索引,括号中自定义回调方法
+     -->
+    <div id="app">
+
+
+        <div class="panel panel-primary">
+            <div class="panel-heading">
+                <h3 class="panel-title">添加品牌</h3>
+            </div>
+            <div class="panel-body form-inline">
+                <label>
+                    ID:<input type="text" class="form-control" v-model="id" />
+                </label>
+                <label>
+                    Name:<input type="text" class="form-control" v-model="name" />
+                </label>
+                <input type="button" class="btn btn-primary" value="添加" v-on:click='add' />
+                <label>
+                    搜索关键字:<input type="text" class="form-control" v-model="keyWords" />
+                </label>
+            </div>
+        </div>
+
+
+        <table class="table table-bordered table-hover table-striped">
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>Name</th>
+                    <th>Ctime</th>
+                    <th>Operation</th>
+
+                </tr>
+            </thead>
+            <tbody>
+                <!-- 之前，v-for中的数据，都是直接从data上的list中直接渲染过来的，现在我们定义个search方法，同时把所有关键字
+                通过传递形参的形势，传递给search方法，在search方法内部，通过执行for循环，把所有的符合搜索关键字的的数据，保存到一个
+            新的数组中 -->
+                <tr v-for="(item,index) in search(keyWords)" :key="item.id">
+                    <th>
+                        {{item.id}}
+                    </th>
+                    <th>
+                        {{item.name}}
+                    </th>
+                    <th>{{item.ctrime|dateFormAt('')}}</th>
+                    <th>
+                        <a href="" @click.prevent='del(item.id)'>删除</a>
+                    </th>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
+    <script>
+        Vue.filter('dateFormAt',function(str,para){
+            var dt=new Date(str);
+            var y=dt.getFullYear();
+            var m=dt.getMonth()+1;
+            var d=dt.getDate();
+
+            //para 如果不进行传值那么就不会进行传值，那么这个参数就是undefined，调用放就会出错，所以加一个判断
+            if(para&&para.toLower()=='yyyy-mm-dd')
+            {
+                return `${y}-${m}-${d}`;
+            }
+            else{
+                var hh=dt.getHours();
+                var mi=dt.getMinutes();
+                var ss=dt.getSeconds();
+                return `${y}-${m}-${d} ${hh}:${mi}:${ss}`;
+            }
+        });
+
+        var vm = new Vue({
+            el: '#app',
+            data() {
+                return {
+                    id: '', //下面methos中要用到所以要首先定义一下
+                    name: '',
+                    keyWords: '',
+                    list: [{
+                            id: 1,
+                            name: '张三',
+                            ctrime: new Date()
+                        },
+                        {
+                            id: 2,
+                            name: '张小三',
+                            ctrime: new Date()
+                        }
+                    ]
+                }
+            },
+            methods: {
+                add() {
+                    //添加方法 分析：获取到ID和name,直接从data上获取，2.组织出一个对象，3把这个对象调用数组的相关方法添加
+                    //data中的list去，4.在vue中，已经实现了数据的双向绑定，每当我们修改了data中的数据Vue会默认监听到数据的改动
+                    //自动吧最新的数据应用的页面上
+
+                    var obj = {
+                        id: this.id,
+                        name: this.name,
+                        ctime: new Date()
+                    };
+                    this.list.push(obj);
+                    this.id = this.name = '';
+                },
+                del(id) {
+                    //分析：如何根据ID找到要删除这一项的索引
+                    //如果找到了索引，直接调用数据的splice方法
+                    // this.list.some((item, i) => {
+                    //     if (item.id == id) {
+                    //         this.list.splice(i,1);
+                    //         return true; //如果返回true some就会立即终止数组的后续循环
+                    //     }
+                    // });
+
+
+                    //方法二：立即找到索引
+                    var index = this.list.findIndex(item => {
+                        if (item.id == id) {
+                            return true;
+                        }
+
+                    });
+                    console.log(index);
+                    this.list.splice(index);
+                },
+                search(keyWords) {
+                    //var newList = [];
+                    // this.list.forEach(item => {
+                    //     if (item.name.indexOf(keyWords) != -1) {
+                    //         newList.push(item);
+                    //     }                       
+                    // })
+                    // return newList;
+
+                    // 注意：foreach（无法停止循环） some（通过ruturn true 停止后面循环） filter（遍历得到一个新数组） 
+                    //findIndex 都是数据新方法
+                    // 方法二
+                    //注意：es6中，为字符串提供一个新方法，叫做，string.prototype.includes('要包含的字符串')
+                    //如果包含则返回true 不包含返回false
+                   var newList= this.list.filter(item=>{
+                        if(item.name.includes(keyWords))
+                        {
+                           return item;
+                        }
+                    });
+                    return newList;
+                }
+            }
+        })
+    </script>
 </body>
+
 </html>
